# win-kernel-sys

./: Cargo.toml  README.md  build.rs
src/: intrin.rs  lib.rs  netio.rs  ntoskrnl.rs  wrapper.c  wrapper.h  wrapper_intrin.c  wrapper_netio.h
