[package]
name = "win-kernel-sys"
version = "2.11.13"
authors = ["emptyqwb <you@example.com>"]
edition = "2021"
description = "windows-kernel-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/emptyqwb/win-kernel-sys.git"

[features]
default = ["intrin", "ntoskrnl", "netio"]
intrin = []
ntoskrnl = []
netio = []

[dependencies]
cty = "0.2"
windows-sys = { version = "0.48.0", features = ["Win32_Networking_WinSock"] }

[build-dependencies]
bindgen = "0.68"
cc = "1.0"
windows-kernel-build ={ version = "2.11.11"}


